# marinor-ros_mqtt_kommunikasjon

./: Dockerfile
mock_gps/: package.xml  setup.cfg  setup.py
mock_gps/mock_gps/: node.py
mock_system/: package.xml  setup.cfg  setup.py
mock_system/mock_system/: node.py
ros_mqtt_bridge/: README.md  package.xml  setup.cfg  setup.py
ros_mqtt_bridge/ros_mqtt_bridge/: boat_pb2.py  node.py
ros_mqtt_bridge/scripts/: integration_test.py
